--- a/starforceCalculator/index.html
+++ b/starforceCalculator/index.html
@@ -139,6 +139,10 @@
                         <input type="checkbox" id="AEE" name="AEE" value="AEE" disabled>
                         <span>Use No Boom AEEs (Tyrant Only)</span>
                     </label>
+                    <label class="checkbox" id='DT-div'>
+                        <input type="checkbox" id="DT" name="DT" value="DT" disabled>
+                        <span>Use Double Time on fail (approx. 2x cost)</span>
+                    </label>
                 </p>
             </div>
 
