--- a/starforceCalculator/index.html
+++ b/starforceCalculator/index.html
@@ -140,7 +140,7 @@
                         <span>Use No Boom AEEs (Tyrant Only)</span>
                     </label>
                     <label class="checkbox" id='DT-div'>
-                        <input type="checkbox" id="DT" name="DT" value="DT" disabled>
+                        <input type="checkbox" id="DT" name="DT" value="DT">
                         <span>Use Double Time on fail (approx. 2x cost)</span>
                     </label>
                 </p>
@@ -149,6 +149,8 @@
             <div class="col-sm-12 containOne">
                 <p>
                     Number of Trials: <input type="number" id="trials" value="1000" />
+                    MLG Rate: <input type="number" id="mlgCost" value="15" />
+                    NX Approx per *: <input type="number" id="nxPerStarApprox" value="250" />
 
 
                 </p>
