--- a/starforceCalculator/index.html
+++ b/starforceCalculator/index.html
@@ -149,7 +149,7 @@
             <div class="col-sm-12 containOne">
                 <p>
                     Number of Trials: <input type="number" id="trials" value="1000" />
-                    MLG Rate: <input type="number" id="mlgCost" value="15" />
+                    MLG Cost: <input type="number" id="mlgCost" value="15000000" />
                     NX Approx per *: <input type="number" id="nxPerStarApprox" value="250000" />
 
 
