--- a/starforceCalculator/index.html
+++ b/starforceCalculator/index.html
@@ -140,7 +140,7 @@
                         <span>Use No Boom AEEs (Tyrant Only)</span>
                     </label>
                     <label class="checkbox" id='DT-div'>
-                        <input type="checkbox" id="DT" name="DT" value="DT">
+                        <input type="checkbox" id="DT" name="DT" value="DT" checked>
                         <span>Use Double Time on fail (approx. 2x cost)</span>
                     </label>
                 </p>
