disable nx approx

--- a/starforceCalculator/index.html
+++ b/starforceCalculator/index.html
@@ -150,7 +150,7 @@
                 <p>
                     Number of Trials: <input type="number" id="trials" value="1000" />
                     MLG Cost: <input type="number" id="mlgCost" value="15000000" />
-                    NX Approx per *: <input type="number" id="nxPerStarApprox" value="250000" />
+                    NX Approx per *: <input type="number" id="nxPerStarApprox" value="Deprecated" disabled />
 
 
                 </p>
